feat: migrate auth preflight methods to rust
